# fastapi-autocrud

./: Readme.md  pyproject.toml
fastapi_autocrud/: router.py  types.py  utils.py
fastapi_autocrud/storage/: __init__.py  base.py  memory.py  tortoise.py
