[project]
name = "fastapi-autocrud"
version = "0.1.5"
description = "Autogenerate FastAPI CRUD routes from Pydantic models."
requires-python = ">=3.8"

dependencies = [
    "fastapi",
    "pydantic",
    "tortoise-orm"
]

[project.optional-dependencies]
dev = [
    "uvicorn",
    "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
